# [workspace]
# members = [
#     "client",
# ]
# default-members = [
#     "client",
# ]

[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.11"
base64 = "0.13.0"
actix-web = "4.1.0"
actix-rt = "2.7.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
open = "3.0.2"

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "rt-multi-thread"]